--- a/public/General-Information.html
+++ b/public/General-Information.html
@@ -49,7 +49,7 @@
                                         <ul class="submenu">
                                             <li><a href="products.html#polyester">Polyester</a></li>
                                             <li><a href="products.html#epoxies">Epoxies</a></li>
-                                            <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
+                                            <li><a href="products.html#polyester-epoxy-hybrids">Hybrids</a></li>
                                             <li><a href="products.html#polyurethane">Polyurethane</a></li>
                                             <li><a href="products.html#art-style">Art Style</a></li>
                                             <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
