--- a/public/contact.html
+++ b/public/contact.html
@@ -59,7 +59,7 @@
                                         <ul class="submenu">
                                             <li><a href="products.html#polyester">Polyester</a></li>
                                             <li><a href="products.html#epoxies">Epoxies</a></li>
-                                            <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
+                                            <li><a href="products.html#polyester-epoxy-hybrids">Hybrids</a></li>
                                             <li><a href="products.html#polyurethane">Polyurethane</a></li>
                                             <li><a href="products.html#art-style">Art Style</a></li>
                                             <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
@@ -106,7 +106,7 @@
                     	<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                         	<div class="contact-form">
                             	<form action="/mail" class="thm-contact-form" method="GET">
-                                	<input name="name" type="text" placeholder="Company Name - Your Name">
+                                	<input name="name" type="text" placeholder="Company Name / Your Name">
                                     <input name="email" type="text" placeholder="Email Address">
                                     <input name="phone" type="text" placeholder="Phone No.">
                                     <textarea name="message" placeholder="Message"></textarea>
