--- a/public/quality-control.html
+++ b/public/quality-control.html
@@ -52,7 +52,7 @@
                                         <ul class="submenu">
                                             <li><a href="products.html#polyester">Polyester</a></li>
                                             <li><a href="products.html#epoxies">Epoxies</a></li>
-                                            <li><a href="products.html#polyester-epoxy-hybrids">Polyester-Eposy Hybrids</a></li>
+                                            <li><a href="products.html#polyester-epoxy-hybrids">Hybrids</a></li>
                                             <li><a href="products.html#polyurethane">Polyurethane</a></li>
                                             <li><a href="products.html#art-style">Art Style</a></li>
                                             <li><a href="products.html#high-temperature-resistance">High Temperature Resistance</a></li>
@@ -201,7 +201,7 @@
                             </div>
                             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
                                 <div class="mission-vision-right-img">
-                                    <img src="img/aboutus/quality.png" alt="">
+                                    <img src="img/aboutus/quality.png" alt="" style="margin-top:13%;">
                                 </div>
                             </div>
                         </div>
