--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -30,7 +30,7 @@
                     <div class="container">
                         <div class="logo pull-left">
                             <a href="index.html">
-                                <img src="img/logo.png" alt="Logo image">
+                                <img src="img/logo2.png" alt="Logo image">
                             </a>
                         </div>
                         <nav class="mainmenu pull-right">
@@ -83,24 +83,65 @@
                         </div>
                     </div>
                 </header>
-        <style type="text/css">
-            .color-charts {
-                width: 100%;
-                height: 90px;
-            }
-        </style>
         <section>
-            <div class="container">
+            <div class="container" style="">
                 <div class="section-title" style="margin-top: 60px;">
                     <h2><span>BEYOND COLOR CHART</span></h2>
                 </div>
-                <div class="row div color-charts">
-                    <div class="col-md-6"><img src="img/seka1.png" alt=""></div>
-                    <div class="col-md-6"><img src="img/seka2.png" alt=""></div>
-                    <!-- <div class="col-md-6"><img src="img/seka3.png" alt=""></div> -->
-                    <!-- <div class="col-md-6"><img src="img/seka4.png" alt=""></div> -->
+                <div class="color-charts">
+                    <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    <div class="by-color-grid" style="background: #EA170C"></div>
+                    <div class="by-color-grid" style="background: #CC170C"></div>
+                    <div class="by-color-grid" style="background: #EBFFFF"></div>
+                    <div class="by-color-grid" style="background: #669B2F"></div>
+                    <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    <div class="by-color-grid" style="background: #E7E9F5"></div>
+                    <div class="by-color-grid" style="background: #59BF38"></div>
+                    <div class="by-color-grid" style="background: #519238"></div>
+                    <div class="by-color-grid" style="background: #3E825B"></div>
+                    <div class="by-color-grid" style="background: #246E3D"></div>
+                    <div class="by-color-grid" style="background: #6D818A"></div>
+                    <div class="by-color-grid" style="background: #556C7C"></div>
+                    <div class="by-color-grid" style="background: #162C39"></div>
+                    <div class="by-color-grid" style="background: #4C4B46"></div>
+                    <div class="by-color-grid" style="background: #193123"></div>
+                    <div class="by-color-grid" style="background: #19624F"></div>
+                    <div class="by-color-grid" style="background: #546B4F"></div>
+                    <div class="by-color-grid" style="background: #307D87"></div>
+                    <div class="by-color-grid" style="background: #FFFFE5"></div>
+                    <div class="by-color-grid" style="background: #FEFF75"></div>
+                    <div class="by-color-grid" style="background: #FEB92D"></div>
+                    <div class="by-color-grid" style="background: #FEB52A"></div>
+                    <div class="by-color-grid" style="background: #8A6CB6"></div>
+                    <div class="by-color-grid" style="background: #3C2760"></div>
+                    <div class="by-color-grid" style="background: #064771"></div>
+                    <div class="by-color-grid" style="background: #1E374D"></div>
+                    <div class="by-color-grid" style="background: #FF8D1A"></div>
+                    <div class="by-color-grid" style="background: #EF6914"></div>
+                    <div class="by-color-grid" style="background: #713B1F"></div>
+                    <div class="by-color-grid" style="background: #FE3509"></div>
+                    <div class="by-color-grid" style="background: #192B5B"></div>
+                    <div class="by-color-grid" style="background: #1E2865"></div>
+                    <div class="by-color-grid" style="background: #1D3A7E"></div>
+                    <div class="by-color-grid" style="background: #2359A3"></div>
+                    <div class="by-color-grid" style="background: #67291C"></div>
+                    <div class="by-color-grid" style="background: #7B2C0E"></div>
+                    <div class="by-color-grid" style="background: #F10909"></div>
+                    <div class="by-color-grid" style="background: #A50409"></div>
+                    <div class="by-color-grid" style="background: #3294FF"></div>
+                    <div class="by-color-grid" style="background: #19110F"></div>
+                    <div class="by-color-grid" style="background: #140F0C"></div>
+                    <div class="by-color-grid" style="background: #191411"></div>
+                    <div class="by-color-grid" style="background: #0A0905"></div>
+                    <div class="by-color-grid" style="background: #282222"></div>
+                    <div class="by-color-grid" style="background: #282425"></div>
+                    <div class="by-color-grid" style="background: #171611"></div>
                 </div>
-            </div>
         </section>
 
         <!--End Footer widget area-->
@@ -134,8 +175,6 @@
             </div>
         </section>
         <!--End Footer area-->
-
-
 
 
         <script src="js/vendor/jquery-1.11.3.min.js"></script>
