--- a/public/pantone_color.html
+++ b/public/pantone_color.html
@@ -27,7 +27,7 @@
                 <div class="container">
                     <div class="logo pull-left">
                         <a href="index.html">
-                            <img src="img/logo.png" alt="Logo image">
+                            <img src="img/logo2.png" alt="Logo image">
                         </a>
                     </div>
                     <nav class="mainmenu pull-right">
