--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -89,58 +89,162 @@
                     <h2><span>BEYOND COLOR CHART</span></h2>
                 </div>
                 <div class="color-charts">
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #EA170C"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #CC170C"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #EBFFFF"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #669B2F"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #E7E9F5"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #59BF38"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #519238"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #3E825B"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #246E3D"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #6D818A"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #556C7C"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #162C39"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #4C4B46"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #193123"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #19624F"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #546B4F"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #307D87"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FFFFE5"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FEFF75"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FEB92D"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FEB52A"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #8A6CB6"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #3C2760"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #064771"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #1E374D"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FF8D1A"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #EF6914"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #713B1F"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #FE3509"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #192B5B"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #1E2865"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #1D3A7E"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #2359A3"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #67291C"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #7B2C0E"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #F10909"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #A50409"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #3294FF"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #19110F"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #140F0C"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #191411"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #0A0905"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #282222"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #282425"></div></div>
-                    <div class="col-md-3 grid-container"><div class="by-color-grid" style="background: #171611"></div></div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFFF; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #E7E9F5"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #6D818A; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #556C7C; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #162C39; border: 1px solid;"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #4C4B46"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FFFFE5"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FEFF75"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FEB92D"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FEB52A"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FF8D1A"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #EF6914"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #713B1F"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #FE3509"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #67291C"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #7B2C0E"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #F10909"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #A50409"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #0A0905"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #282222"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #282425"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #171611"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #EA170C"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #CC170C"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #EBFFFF"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #669B2F"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #59BF38"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #519238"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #3E825B"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #246E3D"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #193123"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #19624F"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #546B4F"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #307D87"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #8A6CB6"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #3C2760"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #064771"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #1E374D"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #192B5B"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #1E2865"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #1D3A7E"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #2359A3"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #3294FF"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #19110F"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #140F0C"></div>
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <div class="by-color-grid" style="background: #191411"></div>
+                    </div>
                 </div>
         </section>
 
