quality control update

--- a/public/beyond-color.html
+++ b/public/beyond-color.html
@@ -245,6 +245,38 @@
                     <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
                         <div class="by-color-grid" style="background: #191411"></div>
                     </div>
+                    <!-- If no image yet leave as blank -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="" alt="" class="by-color-grid blank">
+                    </div>
+                    <!-- If image -->
+                    <div class="col-xs-3 col-sm-3 col-md-3 grid-container">
+                        <img src="img/by-chart/2794.jpg" alt="" class="by-color-grid">
+                    </div>
                 </div>
         </section>
 
